opam-version: "2.0"
maintainer: "opam-devel@lists.ocaml.org"
authors: [ "Oliver Friedmann"
           "Martin Lange" ]
license: "BSD-3-clause"
homepage: "https://github.com/tcsprojects/pgsolver"
dev-repo: "git://github.com/tcsprojects/pgsolver.git"
bug-reports: "https://github.com/tcsprojects/pgsolver/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs "@install" "@doc" {with-doc} "@runtest" {with-test}]
]
depends: [
  "dune" {>= "1.11.0"}
  "ocaml" {>= "4.08.0" & < "5.2"}
  "TCSLib" {>= "0.2"}
  "extlib" | "extlib-compat"
  "minisat"
  "ocaml-sat-solvers" {>= "0.7.1"}
  "ounit" {build}
]
synopsis:
  "A collection of tools for generating, manipulating and - most of all - solving parity games"
description: """\
A collection of tools for generating, manipulating and - most of all -
solving parity games."""
